Fixed spacing

--- a/css/about.css
+++ b/css/about.css
@@ -57,7 +57,7 @@ body {
   margin-left: auto;
   margin-right: auto;
   width: 910px;
-  padding-top: 13px;
+  padding-top: 3px;
 }
 
 .about-container p {
